<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/tab_home"
        android:enabled="true"
        android:icon="@mipmap/daka"
        android:title="@string/mall_home_page"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/tab_group"
        android:enabled="true"
        android:icon="@drawable/group11"
        android:title="@string/mall_home_navigation"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/tab_goods"
        android:enabled="true"
        android:icon="@mipmap/target"
        android:title="@string/mall_home_knowledge_system"
        app:showAsAction="ifRoom" />


    <!--<item-->
        <!--android:id="@+id/tab_search"-->
        <!--android:enabled="true"-->
        <!--android:icon="@mipmap/search"-->
        <!--android:title="@string/mall_home_seach"-->
        <!--app:showAsAction="ifRoom" />-->


    <item
        android:id="@+id/tab_self"
        android:enabled="true"
        android:icon="@mipmap/me"
        android:title="@string/mall_home_self"
        app:showAsAction="ifRoom" />
</menu>
